# rust_pcgrng

./: .gitmodules  CMakeLists.txt  Cargo.toml  README.md  appveyor.yml
benches/: pcgrng.rs
examples/: estimate_pi.cpp  estimate_pi.rs
src/: lib.rs
testdata/: pcg_setseq_64_xsh_rr_32.testscript  pcg_testdata_gen.cpp
tests/: lib_test.rs
